Added CNN model and fixed model perfomance image display

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - Image Classification Project{% endblock %}
+{% block title %}Home - Deep learning multimodel portfolio Project{% endblock %}
 {% load static %}
 {% block extra_css %}
     <!-- Add any additional CSS specific to this page -->
@@ -27,10 +27,10 @@
 
 {% block content %}
     <div class="jumbotron text-center">
-        <h1 class="display-4">Welcome to Deep Learning Project - Batch-5</h1>
-        <p class="lead">Test different deep learning models for image classification with ease!</p>
+        <h1 class="display-4">Welcome to Deep Learning Multimodel Project</h1>
+        <p class="lead">Test different deep learning models for image classification, Time series Analysis and others with ease!</p>
         <hr class="my-4">
-        <p>Choose a model, upload an image, and get instant results.</p>
+        <p>Choose a model, upload Data(Images, time series data), and get instant results.</p>
         <a class="btn btn-primary btn-lg" href="{% url 'test_model' %}" role="button">Get Started</a>
     </div>
 
