--- a/templates/model_performance_detail.html
+++ b/templates/model_performance_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Model Performance Detail - Image Classification Project{% endblock %}
+{% block title %}Model Performance Detail - Deep learning multimodel portfolio Project{% endblock %}
 
 {% block extra_css %}
     <!-- Add any additional CSS specific to this page -->
@@ -52,6 +52,6 @@
         <!-- Add more performance metrics as needed -->
 
         <!-- Display the graphic image using the URL -->
-        <img src="{{ image_path.url }}" alt="Model Performance Graphic" class="img-fluid">
+        <img src="{{ image_path }}" alt="Model Performance Graphic" class="img-fluid">
     </section>
 {% endblock %}
