--- a/templates/model_summary_detail.html
+++ b/templates/model_summary_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Model Summary Detail - Image Classification Project{% endblock %}
+{% block title %}Model Summary Detail - Deep learning multimodel portfolio Project{% endblock %}
 
 {% block extra_css %}
     <!-- Add any additional CSS specific to this page -->
