--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2023 Deep Learning Project - Batch-5</p>
+    <p>&copy; 2024 Deep learning multimodel portfolio</p>
 </footer>
