Added deploment code

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,7 @@
+{% load static %}
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
 <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 Deep learning multimodel portfolio</p>
+    <p></p>
+    <p className="text-center text-muted">&copy; 2024 Deep learning multimodel portfolio - <a href="https://github.com/usanaphtal112" className="text-muted">Naphtal USABYUWERA</a></p>
 </footer>
