--- a/templates/model_performance_detail.html
+++ b/templates/model_performance_detail.html
@@ -37,18 +37,18 @@
     </header>
     <section>
         <h2>Chosen Model: {{ chosen_model }}</h2>
-        <div class="metric">
-            <strong>Accuracy:</strong> {{ performance_results.accuracy }}
-        </div>
-        <div class="metric">
-            <strong>Precision:</strong> {{ performance_results.precision }}
-        </div>
-        <div class="metric">
-            <strong>Recall:</strong> {{ performance_results.recall }}
-        </div>
-        <div class="metric">
-            <strong>F1 Score:</strong> {{ performance_results.f1_score }}
-        </div>
+<!--        <div class="metric">-->
+<!--            <strong>Accuracy:</strong> {{ performance_results.accuracy }}-->
+<!--        </div>-->
+<!--        <div class="metric">-->
+<!--            <strong>Precision:</strong> {{ performance_results.precision }}-->
+<!--        </div>-->
+<!--        <div class="metric">-->
+<!--            <strong>Recall:</strong> {{ performance_results.recall }}-->
+<!--        </div>-->
+<!--        <div class="metric">-->
+<!--            <strong>F1 Score:</strong> {{ performance_results.f1_score }}-->
+<!--        </div>-->
         <!-- Add more performance metrics as needed -->
 
         <!-- Display the graphic image using the URL -->
